# heartrateAnalysis

./: AGENTS.md  PRD.md  README.md  config.sample.yaml  pyproject.toml  requirements.txt
health_hr_analyzer/: __init__.py  classify.py  cli.py  incidents.py  ingest.py  normalize.py  report.py  workouts.py
tests/: test_incidents.py  test_normalize.py  test_overlap.py
